hello/fbdev/vs-hellodev.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-dev
spec:
  hosts:
    - '*'
  gateways:
    - my-gateway
  http:
    - route:
        - destination:
            host: hello-dev
            port:
              number: 8080
